Fix anchor tag CSS on mobile

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -292,7 +292,9 @@ figcaption {
 }
 
 a.anchor {
-    margin-left: -2ch;
+    @include md {
+        margin-left: -2ch;
+    }
 }
 
 .big-header {
